gen/gen/TplParser.java
// Generated from grammar/TplParser.g4 by ANTLR 4.13.2
package gen;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class TplParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		COMMENT_OPEN=1, STYLE_TAG_OPEN=2, LT=3, JOPEN_EXPR=4, JOPEN_STMT=5, TEXT=6, 
		COMMENT_CLOSE=7, COMMENT_TEXT=8, GT=9, SLASH=10, EQUALS=11, DQUOTE=12, 
		BANG=13, DOCTYPE_KW=14, VOID_TAG_NAME=15, TAG_NAME=16, TAG_WS=17, DQUOTE_END=18, 
		ATTR_TEXT=19, JCLOSE_EXPR=20, JCLOSE_STMT=21, IF=22, ELIF=23, ELSE=24, 
		ENDIF=25, FOR=26, ENDFOR=27, IN=28, NOT=29, AND=30, OR=31, TRUE=32, FALSE=33, 
		NONE=34, CMP_EQ=35, CMP_NEQ=36, CMP_LE=37, CMP_GE=38, CMP_LT=39, CMP_GT=40, 
		DOT=41, PIPE=42, LPAREN=43, RPAREN=44, COMMA=45, NUMBER=46, STRING=47, 
		IDENT=48, JINJA_WS=49, STYLE_TAG_CLOSE=50, LBRACE=51, RBRACE=52, COLON=53, 
		SEMI=54, CSS_DOT=55, COLOR=56, UNIT=57, CSS_NUMBER=58, CSS_STRING=59, 
		CSS_IDENT=60, CSS_WS=61;
	public static final int
		RULE_document = 0, RULE_node = 1, RULE_doctype = 2, RULE_htmlComment = 3, 
		RULE_htmlElement = 4, RULE_htmlVoidElement = 5, RULE_attribute = 6, RULE_attrValue = 7, 
		RULE_styleElement = 8, RULE_stylesheet = 9, RULE_cssRule = 10, RULE_cssSelector = 11, 
		RULE_cssProperty = 12, RULE_cssValue = 13, RULE_cssValueItem = 14, RULE_jinjaExprTag = 15, 
		RULE_jFilter = 16, RULE_jFilterArgs = 17, RULE_jinjaIfStmt = 18, RULE_jinjaForStmt = 19, 
		RULE_jinjaExpr = 20, RULE_jOr = 21, RULE_jAnd = 22, RULE_jNot = 23, RULE_jComparison = 24, 
		RULE_compOp = 25, RULE_jAtomPath = 26;
	private static String[] makeRuleNames() {
		return new String[] {
			"document", "node", "doctype", "htmlComment", "htmlElement", "htmlVoidElement", 
			"attribute", "attrValue", "styleElement", "stylesheet", "cssRule", "cssSelector", 
			"cssProperty", "cssValue", "cssValueItem", "jinjaExprTag", "jFilter", 
			"jFilterArgs", "jinjaIfStmt", "jinjaForStmt", "jinjaExpr", "jOr", "jAnd", 
			"jNot", "jComparison", "compOp", "jAtomPath"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'<!--'", "'<style>'", null, "'{{'", "'{%'", null, "'-->'", null, 
			null, "'/'", "'='", null, "'!'", null, null, null, null, null, null, 
			"'}}'", "'%}'", "'if'", "'elif'", "'else'", "'endif'", "'for'", "'endfor'", 
			"'in'", "'not'", "'and'", "'or'", "'True'", "'False'", "'None'", "'=='", 
			"'!='", "'<='", "'>='", null, null, null, "'|'", "'('", "')'", "','", 
			null, null, null, null, "'</style>'", "'{'", "'}'", "':'", "';'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "COMMENT_OPEN", "STYLE_TAG_OPEN", "LT", "JOPEN_EXPR", "JOPEN_STMT", 
			"TEXT", "COMMENT_CLOSE", "COMMENT_TEXT", "GT", "SLASH", "EQUALS", "DQUOTE", 
			"BANG", "DOCTYPE_KW", "VOID_TAG_NAME", "TAG_NAME", "TAG_WS", "DQUOTE_END", 
			"ATTR_TEXT", "JCLOSE_EXPR", "JCLOSE_STMT", "IF", "ELIF", "ELSE", "ENDIF", 
			"FOR", "ENDFOR", "IN", "NOT", "AND", "OR", "TRUE", "FALSE", "NONE", "CMP_EQ", 
			"CMP_NEQ", "CMP_LE", "CMP_GE", "CMP_LT", "CMP_GT", "DOT", "PIPE", "LPAREN", 
			"RPAREN", "COMMA", "NUMBER", "STRING", "IDENT", "JINJA_WS", "STYLE_TAG_CLOSE", 
			"LBRACE", "RBRACE", "COLON", "SEMI", "CSS_DOT", "COLOR", "UNIT", "CSS_NUMBER", 
			"CSS_STRING", "CSS_IDENT", "CSS_WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "TplParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public TplParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DocumentContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(TplParser.EOF, 0); }
		public List<NodeContext> node() {
			return getRuleContexts(NodeContext.class);
		}
		public NodeContext node(int i) {
			return getRuleContext(NodeContext.class,i);
		}
		public DocumentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_document; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TplParserListener ) ((TplParserListener)listener).enterDocument(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TplParserListener ) ((TplParserListener)listener).exitDocument(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TplParserVisitor ) return ((TplParserVisitor<? extends T>)visitor).visitDocument(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DocumentContext document() throws RecognitionException {
		DocumentContext _localctx = new DocumentContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_document);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(57);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 126L) != 0)) {
				{
				{
				setState(54);
				node();
				}
				}
				setState(59);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(60);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class NodeContext extends ParserRuleContext {
		public NodeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_node; }
	 
		public NodeContext() { }
		public void copyFrom(NodeContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ExprNodeContext extends NodeContext {
		public JinjaExprTagContext jinjaExprTag() {
			return getRuleContext(JinjaExprTagContext.class,0);
		}
		public ExprNodeContext(NodeContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TplParserListener ) ((TplParserListener)listener).enterExprNode(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TplParserListener ) ((TplParserListener)listener).exitExprNode(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TplParserVisitor ) return ((TplParserVisitor<? extends T>)visitor).visitExprNode(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ForNodeContext extends NodeContext {
		public JinjaForStmtContext jinjaForStmt() {
			return getRuleContext(JinjaForStmtContext.class,0);
		}
		public ForNodeContext(NodeContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TplParserListener ) ((TplParserListener)listener).enterForNode(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TplParserListener ) ((TplParserListener)listener).exitForNode(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TplParserVisitor ) return ((TplParserVisitor<? extends T>)visitor).visitForNode(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class CommentNodeContext extends NodeContext {
		public HtmlCommentContext htmlComment() {
			return getRuleContext(HtmlCommentContext.class,0);
		}
		public CommentNodeContext(NodeContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TplParserListener ) ((TplParserListener)listener).enterCommentNode(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TplParserListener ) ((TplParserListener)listener).exitCommentNode(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TplParserVisitor ) return ((TplParserVisitor<? extends T>)visitor).visitCommentNode(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class StyleNodeContext extends NodeContext {
		public StyleElementContext styleElement() {
			return getRuleContext(StyleElementContext.class,0);
		}
		public StyleNodeContext(NodeContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TplParserListener ) ((TplParserListener)listener).enterStyleNode(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TplParserListener ) ((TplParserListener)listener).exitStyleNode(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TplParserVisitor ) return ((TplParserVisitor<? extends T>)visitor).visitStyleNode(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class TextNodeContext extends NodeContext {
		public TerminalNode TEXT() { return getToken(TplParser.TEXT, 0); }
		public TextNodeContext(NodeContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TplParserListener ) ((TplParserListener)listener).enterTextNode(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TplParserListener ) ((TplParserListener)listener).exitTextNode(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TplParserVisitor ) return ((TplParserVisitor<? extends T>)visitor).visitTextNode(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class IfNodeContext extends NodeContext {
		public JinjaIfStmtContext jinjaIfStmt() {
			return getRuleContext(JinjaIfStmtContext.class,0);
		}
		public IfNodeContext(NodeContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TplParserListener ) ((TplParserListener)listener).enterIfNode(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TplParserListener ) ((TplParserListener)listener).exitIfNode(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TplParserVisitor ) return ((TplParserVisitor<? extends T>)visitor).visitIfNode(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ElementNodeContext extends NodeContext {
		public HtmlElementContext htmlElement() {
			return getRuleContext(HtmlElementContext.class,0);
		}
		public ElementNodeContext(NodeContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TplParserListener ) ((TplParserListener)listener).enterElementNode(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TplParserListener ) ((TplParserListener)listener).exitElementNode(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TplParserVisitor ) return ((TplParserVisitor<? extends T>)visitor).visitElementNode(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class VoidElementNodeContext extends NodeContext {
		public HtmlVoidElementContext htmlVoidElement() {
			return getRuleContext(HtmlVoidElementContext.class,0);
		}
		public VoidElementNodeContext(NodeContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TplParserListener ) ((TplParserListener)listener).enterVoidElementNode(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TplParserListener ) ((TplParserListener)listener).exitVoidElementNode(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TplParserVisitor ) return ((TplParserVisitor<? extends T>)visitor).visitVoidElementNode(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class DoctypeNodeContext extends NodeContext {
		public DoctypeContext doctype() {
			return getRuleContext(DoctypeContext.class,0);
		}
		public DoctypeNodeContext(NodeContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TplParserListener ) ((TplParserListener)listener).enterDoctypeNode(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TplParserListener ) ((TplParserListener)listener).exitDoctypeNode(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TplParserVisitor ) return ((TplParserVisitor<? extends T>)visitor).visitDoctypeNode(this);
			else return visitor.visitChildren(this);
		}
	}

	public final NodeContext node() throws RecognitionException {
		NodeContext _localctx = new NodeContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_node);
		try {
			setState(71);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				_localctx = new DoctypeNodeContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(62);
				doctype();
				}
				break;
			case 2:
				_localctx = new CommentNodeContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(63);
				htmlComment();
				}
				break;
			case 3:
				_localctx = new VoidElementNodeContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(64);
				htmlVoidElement();
				}
				break;
			case 4:
				_localctx = new ElementNodeContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(65);
				htmlElement();
				}
				break;
			case 5:
				_localctx = new StyleNodeContext(_localctx);
				enterOuterAlt(_localctx, 5);
				{
				setState(66);
				styleElement();
				}
				break;
			case 6:
				_localctx = new IfNodeContext(_localctx);
				enterOuterAlt(_localctx, 6);
				{
				setState(67);
				jinjaIfStmt();
				}
				break;
			case 7:
				_localctx = new ForNodeContext(_localctx);
				enterOuterAlt(_localctx, 7);
				{
				setState(68);
				jinjaForStmt();
				}
				break;
			case 8:
				_localctx = new ExprNodeContext(_localctx);
				enterOuterAlt(_localctx, 8);
				{
				setState(69);
				jinjaExprTag();
				}
				break;
			case 9:
				_localctx = new TextNodeContext(_localctx);
				enterOuterAlt(_localctx, 9);
				{
				setState(70);
				match(TEXT);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DoctypeContext extends ParserRuleContext {
		public TerminalNode LT() { return getToken(TplParser.LT, 0); }
		public TerminalNode BANG() { return getToken(TplParser.BANG, 0); }
		public TerminalNode DOCTYPE_KW() { return getToken(TplParser.DOCTYPE_KW, 0); }
		public TerminalNode TAG_NAME() { return getToken(TplParser.TAG_NAME, 0); }
		public TerminalNode GT() { return getToken(TplParser.GT, 0); }
		public DoctypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_doctype; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TplParserListener ) ((TplParserListener)listener).enterDoctype(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TplParserListener ) ((TplParserListener)listener).exitDoctype(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TplParserVisitor ) return ((TplParserVisitor<? extends T>)visitor).visitDoctype(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DoctypeContext doctype() throws RecognitionException {
		DoctypeContext _localctx = new DoctypeContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_doctype);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(73);
			match(LT);
			setState(74);
			match(BANG);
			setState(75);
			match(DOCTYPE_KW);
			setState(76);
			match(TAG_NAME);
			setState(77);
			match(GT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class HtmlCommentContext extends ParserRuleContext {
		public TerminalNode COMMENT_OPEN() { return getToken(TplParser.COMMENT_OPEN, 0); }
		public TerminalNode COMMENT_CLOSE() { return getToken(TplParser.COMMENT_CLOSE, 0); }
		public List<TerminalNode> COMMENT_TEXT() { return getTokens(TplParser.COMMENT_TEXT); }
		public TerminalNode COMMENT_TEXT(int i) {
			return getToken(TplParser.COMMENT_TEXT, i);
		}
		public HtmlCommentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_htmlComment; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TplParserListener ) ((TplParserListener)listener).enterHtmlComment(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TplParserListener ) ((TplParserListener)listener).exitHtmlComment(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TplParserVisitor ) return ((TplParserVisitor<? extends T>)visitor).visitHtmlComment(this);
			else return visitor.visitChildren(this);
		}
	}

	public final HtmlCommentContext htmlComment() throws RecognitionException {
		HtmlCommentContext _localctx = new HtmlCommentContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_htmlComment);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(79);
			match(COMMENT_OPEN);
			setState(83);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMENT_TEXT) {
				{
				{
				setState(80);
				match(COMMENT_TEXT);
				}
				}
				setState(85);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(86);
			match(COMMENT_CLOSE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class HtmlElementContext extends ParserRuleContext {
		public List<TerminalNode> LT() { return getTokens(TplParser.LT); }
		public TerminalNode LT(int i) {
			return getToken(TplParser.LT, i);
		}
		public List<TerminalNode> TAG_NAME() { return getTokens(TplParser.TAG_NAME); }
		public TerminalNode TAG_NAME(int i) {
			return getToken(TplParser.TAG_NAME, i);
		}
		public List<TerminalNode> GT() { return getTokens(TplParser.GT); }
		public TerminalNode GT(int i) {
			return getToken(TplParser.GT, i);
		}
		public TerminalNode SLASH() { return getToken(TplParser.SLASH, 0); }
		public List<AttributeContext> attribute() {
			return getRuleContexts(AttributeContext.class);
		}
		public AttributeContext attribute(int i) {
			return getRuleContext(AttributeContext.class,i);
		}
		public List<NodeContext> node() {
			return getRuleContexts(NodeContext.class);
		}
		public NodeContext node(int i) {
			return getRuleContext(NodeContext.class,i);
		}
		public HtmlElementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_htmlElement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TplParserListener ) ((TplParserListener)listener).enterHtmlElement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TplParserListener ) ((TplParserListener)listener).exitHtmlElement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TplParserVisitor ) return ((TplParserVisitor<? extends T>)visitor).visitHtmlElement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final HtmlElementContext htmlElement() throws RecognitionException {
		HtmlElementContext _localctx = new HtmlElementContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_htmlElement);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(88);
			match(LT);
			setState(89);
			match(TAG_NAME);
			setState(93);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==TAG_NAME) {
				{
				{
				setState(90);
				attribute();
				}
				}
				setState(95);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(96);
			match(GT);
			setState(100);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(97);
					node();
					}
					} 
				}
				setState(102);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			}
			setState(103);
			match(LT);
			setState(104);
			match(SLASH);
			setState(105);
			match(TAG_NAME);
			setState(106);
			match(GT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class HtmlVoidElementContext extends ParserRuleContext {
		public TerminalNode LT() { return getToken(TplParser.LT, 0); }
		public TerminalNode VOID_TAG_NAME() { return getToken(TplParser.VOID_TAG_NAME, 0); }
		public TerminalNode GT() { return getToken(TplParser.GT, 0); }
		public List<AttributeContext> attribute() {
			return getRuleContexts(AttributeContext.class);
		}
		public AttributeContext attribute(int i) {
			return getRuleContext(AttributeContext.class,i);
		}
		public TerminalNode SLASH() { return getToken(TplParser.SLASH, 0); }
		public HtmlVoidElementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_htmlVoidElement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TplParserListener ) ((TplParserListener)listener).enterHtmlVoidElement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TplParserListener ) ((TplParserListener)listener).exitHtmlVoidElement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TplParserVisitor ) return ((TplParserVisitor<? extends T>)visitor).visitHtmlVoidElement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final HtmlVoidElementContext htmlVoidElement() throws RecognitionException {
		HtmlVoidElementContext _localctx = new HtmlVoidElementContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_htmlVoidElement);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(108);
			match(LT);
			setState(109);
			match(VOID_TAG_NAME);
			setState(113);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==TAG_NAME) {
				{
				{
				setState(110);
				attribute();
				}
				}
				setState(115);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(117);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==SLASH) {
				{
				setState(116);
				match(SLASH);
				}
			}

			setState(119);
			match(GT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AttributeContext extends ParserRuleContext {
		public TerminalNode TAG_NAME() { return getToken(TplParser.TAG_NAME, 0); }
		public TerminalNode EQUALS() { return getToken(TplParser.EQUALS, 0); }
		public AttrValueContext attrValue() {
			return getRuleContext(AttrValueContext.class,0);
		}
		public AttributeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_attribute; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TplParserListener ) ((TplParserListener)listener).enterAttribute(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TplParserListener ) ((TplParserListener)listener).exitAttribute(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TplParserVisitor ) return ((TplParserVisitor<? extends T>)visitor).visitAttribute(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AttributeContext attribute() throws RecognitionException {
		AttributeContext _localctx = new AttributeContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_attribute);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(121);
			match(TAG_NAME);
			setState(124);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==EQUALS) {
				{
				setState(122);
				match(EQUALS);
				setState(123);
				attrValue();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
